2024-09-22T01:45:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10977302177 # 426
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-22
* notice: last 14d: unq all: 8 20
* notice: prev accum: outdated-unq outdated-all / unq all: 118 471 / 127 493
* notice: next accum: outdated-unq outdated-all / unq all: 119 473 / 127 493
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-07] / []

2024-09-21T01:35:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10968578447 # 425
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-21
* notice: last 14d: unq all: 9 22
* notice: prev accum: outdated-unq outdated-all / unq all: 117 469 / 127 493
* notice: next accum: outdated-unq outdated-all / unq all: 118 471 / 127 493
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-06] / []

2024-09-20T01:37:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10951659128 # 424
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-20
* notice: last 14d: unq all: 10 24
* notice: prev accum: outdated-unq outdated-all / unq all: 114 463 / 124 487
* notice: next accum: outdated-unq outdated-all / unq all: 117 469 / 127 493
* notice: prev exec diff / last date diff / accum: unq all: +3 +6 -0 -0 / +3 +6 -0 -0 / 3 6
* notice: removed / changed dates: [2024-09-05] / [2024-09-19]

2024-09-19T01:37:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10932891436 # 423