@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-22T01:45:04Z",
-  "count_outdated" : 473,
-  "uniques_outdated" : 119,
+  "timestamp" : "2024-09-23T01:40:08Z",
+  "count_outdated" : 484,
+  "uniques_outdated" : 122,
   "count" : 493,
   "uniques" : 127,
   "views" : [
-    {
-      "timestamp": "2024-09-08T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 11 ],
-      "count_decinc": [ 0, 11 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2024-09-12T00:00:00Z",
       "count": 1,
