@@ -1,12 +1,7 @@
 {
-  "count": 20,
-  "uniques": 8,
+  "count": 9,
+  "uniques": 5,
   "views": [
-    {
-      "timestamp": "2024-09-08T00:00:00Z",
-      "count": 11,
-      "uniques": 3
-    },
     {
       "timestamp": "2024-09-12T00:00:00Z",
       "count": 1,
